syntax = "proto3";
package cosmos.airdrop.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/airdrop/v1beta1/airdrop.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/airdrop/types";

// Msg defines the airdrop Msg service.
service Msg {

  // AirDrop defines a method for sending coins to the airdrop module for distribution
  rpc AirDrop(MsgAirDrop) returns (MsgAirDropResponse);
}

// MsgAirDrop represents a message to create an airdrop fund for distribution
message MsgAirDrop {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  Fund   fund         = 2 [(gogoproto.moretags) = "yaml:\"fund\""];
}

// MsgAirDropResponse represents a message for the response
message MsgAirDropResponse {}
